<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- CityRun -->
    <!-- global -->
    <string name="app_name">城市雷达</string>
    <!-- login_activity -->
    <string name="login_usingrenren">使用人人登录</string>
    <!-- main_map -->
    <string name="menulist01_found_game">查找游戏</string>
    <string name="menulist02_creat_game">创建游戏</string>
    <string name="menulist03_radara">雷达模式</string>
    <string name="menulist04_comopass">指南针</string>
    <string name="menulist05_renren_share">人人分享</string>
    <string name="menulist06_upload_photo">拍照上传</string>
    <string name="menulist07_check_update">检查更新</string>
    <string name="menulist08_get_help">查看帮助</string>
    <string name="menulist09_renren_unbind">解除绑定 </string>
    <string name="menulist10_exit">退出</string>
    <string name="menulist11_about">关于我们</string>
    <string name="menulist11_hehe">动态加载</string>

    <!-- creatgame_dialog -->
    <string name="lon">经度:</string>
    <string name="lat">纬度</string>
    <string name="input_gpo_name">在此输入游戏点名称</string>
    <string name="question">问题:</string>
    <string name="input_question">在此输入游戏点问题</string>
    <string name="answer">答案:</string>
    <string name="input_answer">在此输入答案</string>
    <string name="msg">描述:</string>
    <string name="input_msg">在此输入描述</string>
    

    <string name="singin_name">登录名</string>
    <string name="singin_namecue">请输入您的常用邮箱作为登录名</string>
    <string name="password">密码</string>
    <string name="password2">确认密码</string>
    <string name="signin">注册</string>
    <string name="cancel">返回</string>
    <string name="space">" "</string>

    <!-- 人人 -->
    <string name="copyright">copyright 2011. Renren Inc.</string>
    <string name="login">登录</string>
    <string name="login_hint">请选择以下方式进行登录</string>
    <string name="auth_site_mode">授权页面方式</string>
    <string name="sso_mode">SSO方式</string>
    <string name="password_flow_mode">用户名密码方式</string>
    <string name="auth_string">请登录</string>
    <string name="auth_success">登陆成功</string>
    <string name="auth_failed">登陆失败</string>
    <string name="upload_photo">上传照片</string>
    <string name="logout">登出</string>
    <string name="view_log">查看Log</string>
    <string name="user_info_group">用户信息</string>
    <string name="logined_user_info">登录用户信息</string>
    <string name="logined_user_info_api">getCurrentUserInfo</string>
    <string name="albums_info">相册信息</string>
    <string name="albums_info_api">getAlbums</string>
    <string name="users_getinfo">获取指定uid用户信息</string>
    <string name="users_getinfo_api">users.getInfo</string>
    <string name="friends_get">获取当前用户好友uid列表</string>
    <string name="friends_get_api">friends.get</string>
    <string name="friends_get_friends">获取当前用户好友列表</string>
    <string name="friends_get_friends_api">friends.getFriends</string>
    <string name="publish_group">发布内容</string>
    <string name="publish_status">状态</string>
    <string name="publish_status_api">publishStatus</string>
    <string name="publish_feed">新鲜事</string>
    <string name="publish_feed_api">publishFeed</string>
    <string name="publish_photo">照片</string>
    <string name="publish_photo_api">uploadPhoto</string>
    <string name="create_album">新建相册</string>
    <string name="create_album_api">createAlbum</string>
    <string name="one_click_publish_group">一键发布</string>
    <string name="one_click_status">状态</string>
    <string name="one_click_status_api">publishStatus</string>
    <string name="one_click_photo">照片</string>
    <string name="one_click_photo_api">publishPhoto</string>
    <string name="one_click_album">新建相册</string>
    <string name="one_click_album_api">createAlbum</string>
    <string name="dialog_group">Dialog</string>
    <string name="dialog_feed">Feed Dialog</string>
    <string name="dialog_feed_api">publishFeed</string>
    <string name="dialog_status">Status Dialog</string>
    <string name="dialog_status_api">publishStatus</string>
    <string name="extensions_group">Extensions</string>
    <string name="extensions_pay">支付</string>
    <string name="extensions_pay_api">pay Extensions</string>
    <!-- invoke names -->
    <string name="logined_user_info_invoke">Renren.getUserInfo</string>
    <string name="albums_info_invoke">Renren.getAlbums</string>
    <string name="publish_status_invoke">Renren.publishStatus</string>
    <string name="publish_feed_invoke">Renren.publishFeed</string>
    <string name="publish_photo_invoke">Renren.publishPhoto</string>
    <string name="one_click_status_invoke">Renren.publishStatusWithActivity</string>
    <string name="one_click_photo_invoke">Renren.publishPhotoWithActivity</string>
    <string name="dialog_feed_invoke">Renren.feedWidget</string>
    <string name="dialog_status_invoke">Renren.statusWidget</string>
    <string name="create_album_invoke">Renren.createAlbum</string>
    <string name="one_click_album_invoke">Renren.createAlbumWithActivity</string>
    <string name="users_getinfo_invoke">Renren.getUsersInfo</string>
    <string name="friends_get_invoke">Renren.friends.get</string>
    <string name="friends_get_friends_invoke">Renren.friends.getFriends</string>
    <string name="extensions_pay_invoke">Renren.extensions.pay</string>
    <string name="auth_failed">验证失败</string>
    <string name="username"></string>
    <string name="password"></string>

    <!-- Status publish activity -->
    <string name="status_pub_title">发布状态</string>
    <string name="status_label">状态</string>
    <string name="status_pub_button">发布</string>
    <string name="response_result">返回结果</string>

    <!-- log activity -->
    <string name="clear_log">清空</string>
    <string name="get_back">返回</string>
    <string name="log_title">log记录</string>

    <!-- common -->
    <string name="run">运行</string>
    <string name="renren_demo_status_hint">你正在干嘛？</string>

    <!-- pay activity -->
    <string name="renren_demo_pay_title">支付测试Demo</string>
    <string name="renren_demo_pay_amount">支付金额</string>
    <string name="renren_demo_pay_order_number">订单编号</string>
    <string name="renren_demo_pay_order_payment">payment</string>
    <string name="renren_demo_pay_des">订单描述</string>
    <string name="renren_demo_pay_pay">点击支付</string>
    <string name="renren_demo_pay_open_repair">修复订单</string>
    <string name="dialog_update_title">更新</string>
    <string name="dialog_update_msg">发现新版本，版本号：</string>
    <string name="dialog_update_msg2">，是否立即更新</string>
    <string name="dialog_update_btnupdate">更新</string>
    <string name="dialog_update_btnnext">下次再说</string>
    <string name="dialog_downloading_msg">正在下载更新。。。</string>
    <string name="dialog_alert_title">警告</string>
    <string name="dialog_downfailed_btndown">重新下载</string>
    <string name="dialog_downfailed_btnnext">以后再说</string>
    <string name="dialog_error_title">错误</string>
    <string name="dialog_downfailed_msg">下载更新失败，是否重试？</string>

</resources>