<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/dialog"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/lon"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:text="@string/lon" />

    <TextView
        android:id="@+id/lat"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lon"
        android:text="@string/lat" />

    <EditText
        android:id="@+id/name"
        android:layout_width="260dip"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/lat"
        android:hint="@string/input_gpo_name" >

    </EditText>

    <TextView
        android:id="@+id/wenti"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/name"
        android:text="@string/question" />

    <EditText
        android:id="@+id/question"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/name"
        android:layout_below="@+id/name"
        android:layout_toRightOf="@+id/wenti"
        android:ems="10"
        android:hint="@string/input_question" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/question"
        android:text="@string/answer" />

    <EditText
        android:id="@+id/answer"
        android:layout_width="200dip"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/question"
        android:layout_below="@+id/question"
        android:layout_toRightOf="@+id/textView4"
        android:ems="10"
        android:hint="@string/input_answer" />

    <TextView
        android:id="@+id/msgTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_below="@+id/answer"
        android:text="@string/msg" />

    <EditText
        android:id="@+id/msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/answer"
        android:layout_toRightOf="@+id/msgTextView"
        android:ems="10" 
        android:hint="@string/input_msg"/>

</RelativeLayout>